[gd_scene load_steps=8 format=3 uid="uid://oxhkrjhmjg6h"]

[ext_resource type="PackedScene" uid="uid://bgb1qjhfdk2qr" path="res://Scenes/world1.tscn" id="1_dsgse"]
[ext_resource type="Script" path="res://Scripts/horse_room.gd" id="1_rs1el"]
[ext_resource type="PackedScene" uid="uid://b8ugmxfy2ri4x" path="res://Scenes/player.tscn" id="2_xh47o"]
[ext_resource type="PackedScene" uid="uid://du11igeby5bn2" path="res://Scenes/Horse.tscn" id="3_xh47o"]
[ext_resource type="Script" path="res://Scripts/UI.gd" id="5_mu6v4"]
[ext_resource type="Script" path="res://Scripts/level-audio-manager.gd" id="6_sguf8"]

[sub_resource type="LabelSettings" id="LabelSettings_mu6v4"]

[node name="Main" type="Node2D"]
position = Vector2(3, -22)
script = ExtResource("1_rs1el")
horse_scene = ExtResource("3_xh47o")

[node name="TileMap" parent="." instance=ExtResource("1_dsgse")]

[node name="Player" parent="." instance=ExtResource("2_xh47o")]
position = Vector2(286, 581)

[node name="SpawnPoints" type="Node2D" parent="."]
position = Vector2(205, 352)

[node name="SpawnPoint1" type="Marker2D" parent="SpawnPoints"]
position = Vector2(-85, -217)

[node name="SpawnPoint2" type="Marker2D" parent="SpawnPoints"]
position = Vector2(265, -220)

[node name="SpawnPoint3" type="Marker2D" parent="SpawnPoints"]
position = Vector2(-81, 214)

[node name="SpawnPoint4" type="Marker2D" parent="SpawnPoints"]
position = Vector2(277, 214)

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("5_mu6v4")

[node name="LevelLabel" type="Label" parent="UI"]
offset_left = 274.0
offset_top = 716.0
offset_right = 314.0
offset_bottom = 739.0
label_settings = SubResource("LabelSettings_mu6v4")

[node name="MessageTimer" type="Timer" parent="UI"]

[node name="ProgressBar" type="ProgressBar" parent="UI"]
offset_left = 378.0
offset_right = 382.0
offset_bottom = 27.0

[node name="HealthLabel" type="Label" parent="UI"]
offset_left = 4.0
offset_top = 2.0
offset_right = 44.0
offset_bottom = 25.0

[node name="LevelTimer" type="Timer" parent="."]

[node name="AudioManager" type="Node" parent="."]
script = ExtResource("6_sguf8")

[node name="LevelAudioPlayer" type="AudioStreamPlayer" parent="AudioManager"]
